ACCUMULO-4448 - Remove accumulo.policy.example
* Example file is no longer included in distribution tarball
* Updated accumulo-env.sh to not look for file or set security policy

Closes apache/accumulo#146

Signed-off-by: Josh Elser <elserj@apache.org>